<resources>
    <string name="app_name">Sally\'s Shoe Store</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_text">Sally\'s Shoe Marketplace is the ONLY online marketplace that is limited to shoes. It\'s free to sign up, with no cost for buyers and minimal costs for sellers. Whether you\'re looking for the latest designer styles or classic vintage pairs, you\'ll find what you\'re looking for at Sally\'s.</string>
    <string name="welcome_header">Welcome to Sally\'s Shoe Marketplace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="tap_the_button_to_check_out_our_inventory_of_new_and_used_shoes_you_can_also_add_your_own_shoes_for_consignment_sale_we_offer_an_80_20_consignment_split_the_best_in_the_industry">Tap the button to check out our inventory of new and used shoes. You can also add your own shoes for consignment sale. We offer an 80-20 consignment split - the best in the industry!</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_the_brand_name">Enter the brand name</string>
    <string name="add_a_new_shoe">Add Shoes</string>
    <string name="brand_name">Brand Name: %1$s</string>
    <string name="type_name">Shoe Type: %1$s</string>
    <string name="size_grouping">Size Group: %1$s</string>
    <string name="shoe_size">Size: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="brand_header">Brand:</string>
    <string name="type_header">Shoe Type:</string>
    <string name="size_group_header">Size Group:</string>
    <string name="size_header">Size:</string>
    <string name="description_header">Description:</string>
</resources>
